--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       <h1>RUN EBE RUN</h1>
       <h3>Doğumhaneye Ulaş!</h3>
       <p style="max-width:720px">
-        Parlak <b>hastane koridorlarında</b> koş, <b>doğum malzemelerini</b> topla, eğlenceli engellerden sıyrıl!<br>
-        Dikkat: <b>Kaygan Leke</b> (zeminde pıtır pıtır kaydırır), <b>Panik Pufu</b> (uçuşan telaş bulutu) ve <b>Evrak Canavarı</b> (kule gibi dosya yığını)!
+        Parlak <b>hastane koridorlarında</b> koş; <b>doğum malzemelerini</b> topla, engellerden ustalıkla sıyrıl!
       </p>
       <label for="ad">Oyuncu Adı</label>
       <input id="ad" maxlength="12" placeholder="Runebe"/>
@@ -50,8 +49,8 @@
       <h3>Nasıl Oynanır?</h3>
       <ul>
         <li>Toplanacaklar: <b>Doğum Seti (+30)</b>, <b>Şırınga (+18)</b>, <b>Kordon Makası (+20)</b>, <b>Bebek Bezi (+12)</b>, <b>Önlük (+14)</b>, <b>Eldiven (+10)</b>, <b>Maske (+12)</b></li>
-        <li>Engeller: <b>Kaygan Leke</b>, <b>Panik Pufu</b>, <b>Evrak Canavarı</b></li>
-        <li>Her 60 malzemede hızlanırsın. 3 canın var. Hadi doğumhaneye!</li>
+        <li>Engeller: <b>Islak Temizlik Alanı</b>, <b>Ekipman Arabası</b>, <b>Servis Kapısı</b></li>
+        <li>Her 60 malzemede hızın artar. 3 canın var. Hadi doğumhaneye!</li>
       </ul>
       <button id="kapatHow">Kapat</button>
     </div>
@@ -143,6 +142,11 @@ let hiz=6, vx=0, x=120, y=H-120, vy=0, yerde=true;
 let can=3, puan=0, combo=0, ilerleme=0, zorluk=0;
 let malzemeler=[], engeller=[], efekts=[];
 
+/* ==== kamera & dünya ==== */
+let camX = 0;          // kameranın dünya X konumu
+let camY = 0;          // zıpladıkça hafif dikey takip
+const PX  = 220;       // oyuncunun ekrandaki sabit X konumu
+
 /* ==== malzeme listesi ==== */
 const MALZ=[
   {tur:'Doğum Seti',   puan:30, c:'#ffda55'},
@@ -159,36 +163,57 @@ function rr(x,y,w,h,r){const q=Math.min(r,w/2,h/2);ctx.beginPath();
   ctx.moveTo(x+q,y);ctx.arcTo(x+w,y,x+w,y+h,q);ctx.arcTo(x+w,y+h,x,y+h,q);
   ctx.arcTo(x,y+h,x,y,q);ctx.arcTo(x,y,x+w,y,q);ctx.closePath();}
 
+/* Koridor — kamera ile akış */
 function cizKoridor(){
-  const mid=H*0.58, vanX=W/2, vanY=mid-90;
-  const gTop=ctx.createLinearGradient(0,0,0,mid); gTop.addColorStop(0,'#fefefe'); gTop.addColorStop(1,'#f2f6ff');
+  const mid=H*0.58 + camY;             // dikey pan
+  const vanX=W/2, vanY=mid-90;
+
+  // üst & zemin
+  const gTop=ctx.createLinearGradient(0,0,0,mid);
+  gTop.addColorStop(0,'#fefefe'); gTop.addColorStop(1,'#f2f6ff');
   ctx.fillStyle=gTop; ctx.fillRect(0,0,W,mid);
-  const gFl=ctx.createLinearGradient(0,mid,0,H); gFl.addColorStop(0,'#dde4f7'); gFl.addColorStop(1,'#c9d4f1');
+  const gFl=ctx.createLinearGradient(0,mid,0,H);
+  gFl.addColorStop(0,'#dde4f7'); gFl.addColorStop(1,'#c9d4f1');
   ctx.fillStyle=gFl; ctx.fillRect(0,mid,W,H-mid);
 
-  /* Temple-Run hissi: yan raylar + akan şeritler */
+  // perspektif raylar
   ctx.strokeStyle='rgba(31,42,68,.25)'; ctx.lineWidth=3;
   ctx.beginPath(); ctx.moveTo(vanX-120,vanY); ctx.lineTo(0,H); ctx.stroke();
   ctx.beginPath(); ctx.moveTo(vanX+120,vanY); ctx.lineTo(W,H); ctx.stroke();
 
+  // zemin taramaları
   ctx.strokeStyle='rgba(31,42,68,.15)'; ctx.lineWidth=2;
-  for(let y=mid+18,st=20;y<H;y+=st,st*=1.08){ ctx.beginPath(); ctx.moveTo(0,y); ctx.lineTo(W,y); ctx.stroke();}
-  ctx.strokeStyle='rgba(255,255,255,.7)'; ctx.lineWidth=4;
-  for(let i=0;i<6;i++){ const ofs=(i*200 + (t*220)%200); const y=H-(40+ofs);
-    ctx.beginPath(); ctx.moveTo(W*0.25,y); ctx.lineTo(W*0.75,y); ctx.stroke();}
+  let st=20, yLine=mid+18;
+  while(yLine<H){ ctx.beginPath(); ctx.moveTo(0,yLine); ctx.lineTo(W,yLine); ctx.stroke(); yLine+=st; st*=1.08; }
 
-  /* kapılar + ışıklar */
+  // hareketli şerit paketleri (camX ile akar)
+  ctx.strokeStyle='rgba(255,255,255,.7)'; ctx.lineWidth=4;
+  for(let i=0;i<6;i++){
+    const ofs = ((i*280) - (camX*0.9)) % 200;
+    const y = H - (40 + (200 - (ofs<0?ofs+200:ofs)));
+    ctx.beginPath(); ctx.moveTo(W*0.25,y); ctx.lineTo(W*0.75,y); ctx.stroke();
+  }
+
+  // kapı panelleri
   const doorW=60,doorH=110; ctx.fillStyle='#fff';
-  for(let i=0;i<3;i++){ const o=(i*320+(t*140)%320), yy=mid-35;
-    let xR=W-40-o; if(xR>-doorW&&xR<W){ rr(xR,yy,doorW,doorH,10); ctx.fill();
+  for(let i=0;i<3;i++){
+    const o = ((i*360) - (camX*0.6)) % (W+doorW+80);
+    const yy=mid-35;
+    const xR=W-40-o; if(xR>-doorW && xR<W){ rr(xR,yy,doorW,doorH,10); ctx.fill();
       ctx.fillStyle='rgba(31,42,68,.06)'; ctx.fillRect(xR+doorW-10,yy+50,4,16); ctx.fillStyle='#fff';}
-    let xL=40+o; if(xL>-doorW&&xL<W){ rr(xL,yy,doorW,doorH,10); ctx.fill();
-      ctx.fillStyle='rgba(31,42,68,.06)'; ctx.fillRect(xL+6,yy+50,4,16); ctx.fillStyle='#fff';}}
-  for(let i=0;i<5;i++){ const lx=((i*260+(t*70)%260)%(W+160))-80, ly=mid-130;
+    const xL=40+o; if(xL>-doorW && xL<W){ rr(xL,yy,doorW,doorH,10); ctx.fill();
+      ctx.fillStyle='rgba(31,42,68,.06)'; ctx.fillRect(xL+6,yy+50,4,16); ctx.fillStyle='#fff';}
+  }
+
+  // tavan lambaları
+  for(let i=0;i<5;i++){
+    const lx = ((i*260) - (camX*0.45)) % (W+160) - 80;
+    const ly = mid-130;
     ctx.fillStyle='rgba(255,255,255,.9)'; rr(lx,ly,66,14,7); ctx.fill();
     const glow=ctx.createRadialGradient(lx+33,ly+7,5,lx+33,ly+7,95);
     glow.addColorStop(0,'rgba(255,255,255,.35)'); glow.addColorStop(1,'rgba(255,255,255,0)');
-    ctx.fillStyle=glow; ctx.beginPath(); ctx.arc(lx+33,ly+7,95,0,Math.PI*2); ctx.fill(); }
+    ctx.fillStyle=glow; ctx.beginPath(); ctx.arc(lx+33,ly+7,95,0,Math.PI*2); ctx.fill();
+  }
 }
 
 function cizAltinHalo(x,y,r){ const rg=ctx.createRadialGradient(x,y,r*0.2,x,y,r);
@@ -197,7 +222,6 @@ function cizAltinHalo(x,y,r){ const rg=ctx.createRadialGradient(x,y,r*0.2,x,y,r)
 
 function cizMalzeme(m){
   ctx.save(); ctx.translate(m.x,m.y); ctx.lineWidth=3;
-
   if(m.tur==='Doğum Seti'){
     ctx.fillStyle = m.c; rr(-16,-12,32,24,6); ctx.fill();
     ctx.fillStyle = 'rgba(255,255,255,.8)'; rr(-10,-4,20,8,3); ctx.fill();
@@ -232,8 +256,7 @@ function cizMalzeme(m){
     ctx.moveTo(14,-2);  ctx.lineTo(20,-4); ctx.moveTo(14,2);  ctx.lineTo(20,4);
     ctx.stroke();
   }
-
-  /* yumuşak parlama */
+  // parlama
   ctx.globalAlpha=.35; ctx.fillStyle='#fff';
   ctx.beginPath(); ctx.ellipse(-8,-10,14,6,-0.5,0,Math.PI*2); ctx.fill();
   ctx.globalAlpha=1; ctx.restore();
@@ -248,87 +271,150 @@ function cizKarakter(){ /* saç animasyonlu */
   ctx.fillStyle='#2b2b2b'; ctx.beginPath(); ctx.arc(hx+4,hy-2,1.8,0,Math.PI*2); ctx.fill();
 }
 
-/* ========= Spawn ========= */
+/* ========= Spawn — dünya koordinatları ========= */
 function spawnMalz(){
-  const lanes=[0,60,120], m=MALZ[Math.floor(Math.random()*MALZ.length)];
-  malzemeler.push({tur:m.tur, puan:m.puan, c:m.c, x:W+40, y:H-120-lanes[Math.floor(Math.random()*lanes.length)]});
+  const lanes=[0,60,120];
+  const m = MALZ[Math.floor(Math.random()*MALZ.length)];
+  const worldX = camX + W + 60 + Math.random()*260;      // ileriye doğ
+  malzemeler.push({
+    tur:m.tur, puan:m.puan, c:m.c,
+    X: worldX,                                             // dünya X
+    y: H-120 - lanes[Math.floor(Math.random()*lanes.length)]
+  });
 }
 function spawnEngel(){
-  const baseY=H-100, r=Math.random();
-  if(r<0.4) engeller.push({tip:'leke',x:W+60,y:baseY,w:60,h:26});               /* Kaygan Leke */
-  else if(r<0.7){ const yy=baseY-60-Math.random()*100;                           /* Panik Pufu */
-    engeller.push({tip:'pufu',x:W+60,y:yy,vy:(Math.random()<.5?0.4:-0.4)}); }
-  else engeller.push({tip:'evrak',x:W+60,y:baseY-40,w:40,h:40});                 /* Evrak Canavarı */
+  const baseY = H - 100;
+  const r = Math.random();
+  const worldX = camX + W + 80 + Math.random()*280;
+  if (r < 0.4) { // Islak Temizlik Alanı
+    engeller.push({ tip:'temizlik', X:worldX, y:baseY, w:60, h:26 });
+  } else if (r < 0.7) { // Ekipman Arabası
+    const yy = baseY - 60 - Math.random()*100;
+    engeller.push({ tip:'araba', X:worldX, y:yy, vy:(Math.random()<.5?0.4:-0.4) });
+  } else { // Servis Kapısı
+    engeller.push({ tip:'kapi', X:worldX, y:baseY-40, w:40, h:40 });
+  }
 }
 
 /* ========= Döngü ========= */
 function reset(){
-  hiz=6; vx=0; x=120; y=H-120; vy=0; yerde=true;
+  camX=0; camY=0;
+  hiz=6; vx=0; x=PX; y=H-120; vy=0; yerde=true;
   can=3; puan=0; combo=0; ilerleme=0; zorluk=0;
   malzemeler=[]; engeller=[]; efekts=[];
 }
-function tick(dt){
-  zorluk += dt*0.06; hiz = 6 + zorluk*1.2 + Math.min(2, Math.floor(puan/200)*0.5); t += dt;
 
+function tick(dt){
+  // zorluk & hız
+  zorluk += dt*0.06;
+  hiz = 6 + zorluk*1.2 + Math.min(2, Math.floor(puan/200)*0.5);
+  t += dt;
+
+  // kamera akışı
+  camX += hiz;                                       // yatay akış
+  const targetCamY = (H-120 - y)*0.15;               // zıpladıkça hafif pan
+  camY += (targetCamY - camY) * 0.08;
+
+  // oyuncu (ekran koordinatı)
+  x = PX + vx;
+  vy += 0.9; y += vy;
+  if (y > H-120){ y=H-120; vy=0; yerde=true; }
+
+  // spawn oranları
   if (t%1 < dt){
     const mc=0.65+Math.min(.2,zorluk*0.15), ec=0.2+Math.min(.45,zorluk*0.25);
     if(Math.random()<mc) spawnMalz();
     if(Math.random()<ec) spawnEngel();
   }
 
-  x += vx; vy += 0.9; y += vy; if(y>H-120){ y=H-120; vy=0; yerde=true; }
-
-  malzemeler.forEach(c=>c.x-=hiz);
-  engeller.forEach(h=>{ h.x-=hiz;
-    if(h.tip==='pufu'){ h.y+=h.vy; if(h.y<H-220||h.y>H-80) h.vy*=-1; }});
-
-  efekts=efekts.filter(e=> (e.t+=dt) < 1);
-
-  /* toplama */
-  malzemeler = malzemeler.filter(c=>{
-    const hit=Math.hypot((x+20)-c.x,(y+20)-c.y) < 26;
-    if(hit){ puan += c.puan*(1+Math.floor(combo/5)); combo++; ilerleme++; efekts.push({x:c.x,y:c.y,txt:`+${c.puan} ${c.tur}`,t:0}); }
-    return !hit && c.x>-40;
-  });
-
-  /* engel çarpışma */
-  engeller = engeller.filter(h=>{
-    let hit=false;
-    if(h.tip==='pufu') hit=Math.hypot((x+20)-h.x,(y+20)-h.y)<30;
-    else hit=(x+20>h.x && x<h.x+(h.w||0) && y+40>h.y && y<h.y+(h.h||0));
-    if(hit){ can--; combo=0; }
-    return !hit && h.x>-60;
-  });
-
-  if(ilerleme>=60){ ilerleme=0; hiz+=0.6; }
-  if(can<=0) gameOver();
-}
-function draw(){
-  cizKoridor();
-  malzemeler.forEach(c=>{ cizMalzeme({x:c.x,y:c.y,tur:c.tur,c:c.c}); cizAltinHalo(c.x,c.y,18); });
+  // hareketli engel
   engeller.forEach(h=>{
-    if(h.tip==='leke'){ /* Kaygan Leke */
-      ctx.fillStyle='#a8d8ff'; rr(h.x,h.y,h.w,h.h,8); ctx.fill();
-      ctx.globalAlpha=.25; ctx.fillStyle='#fff'; rr(h.x+6,h.y+5,h.w-12,h.h-10,8); ctx.fill(); ctx.globalAlpha=1;
-    } else if(h.tip==='pufu'){ /* Panik Pufu */
-      ctx.globalAlpha=.75; ctx.fillStyle='#ffd3b6'; ctx.beginPath(); ctx.arc(h.x,h.y,22,0,Math.PI*2); ctx.fill(); ctx.globalAlpha=1;
-    } else { /* Evrak Canavarı */
-      ctx.fillStyle='#d4b5ff'; rr(h.x,h.y,h.w,h.h,6); ctx.fill();
-      ctx.fillStyle='rgba(31,42,68,.15)'; ctx.fillRect(h.x+6,h.y+6,h.w-12,6);
+    if (h.tip === 'araba'){
+      h.y += h.vy;
+      if (h.y < H-220 || h.y > H-80) h.vy *= -1;
     }
   });
+
+  // ekran dışını temizle
+  malzemeler = malzemeler.filter(c=> (c.X - camX) > -60 );
+  engeller   = engeller.filter(h=> (h.X - camX) > -80 );
+
+  // çarpışmalar (ekran X = dünyaX - camX)
+  malzemeler = malzemeler.filter(c=>{
+    const sx = c.X - camX;
+    const hit = Math.hypot((x+20)-sx,(y+20)-c.y) < 26;
+    if(hit){
+      puan += c.puan*(1+Math.floor(combo/5));
+      combo++; ilerleme++;
+      efekts.push({x:sx,y:c.y,txt:`+${c.puan} ${c.tur}`,t:0});
+    }
+    return !hit;
+  });
+
+  engeller = engeller.filter(h=>{
+    const sx = h.X - camX;
+    let hit=false;
+    if (h.tip==='araba'){
+      hit = Math.hypot((x+20)-sx,(y+20)-h.y) < 30;
+    } else {
+      hit = (x+20>sx && x<sx+(h.w||0) && y+40>h.y && y<h.y+(h.h||0));
+    }
+    if(hit){ can--; combo=0; }
+    return !hit;
+  });
+
+  if(ilerleme>=60){ ilerleme=0; }      // istersen ekstra hız ekleyebilirsin
+  if(can<=0) gameOver();
+}
+
+function draw(){
+  cizKoridor();
+
+  // malzemeler
+  malzemeler.forEach(c=>{
+    const sx = c.X - camX;
+    cizMalzeme({x:sx, y:c.y, tur:c.tur, c:c.c});
+    cizAltinHalo(sx, c.y, 18);
+  });
+
+  // engeller
+  engeller.forEach(h=>{
+    const sx = h.X - camX;
+    if(h.tip==='temizlik'){            // Islak Temizlik Alanı
+      ctx.fillStyle='#a8d8ff'; rr(sx,h.y,h.w,h.h,8); ctx.fill();
+      ctx.globalAlpha=.25; ctx.fillStyle='#fff'; rr(sx+6,h.y+5,h.w-12,h.h-10,8); ctx.fill(); ctx.globalAlpha=1;
+    } else if(h.tip==='araba'){        // Ekipman Arabası
+      ctx.fillStyle='#ffd3b6'; rr(sx-20,h.y-14,40,28,6); ctx.fill();
+      ctx.fillStyle='#1f2a44'; ctx.beginPath(); ctx.arc(sx-12,h.y+12,4,0,Math.PI*2); ctx.fill();
+      ctx.beginPath(); ctx.arc(sx+12,h.y+12,4,0,Math.PI*2); ctx.fill();
+    } else {                           // Servis Kapısı
+      ctx.fillStyle='#d4b5ff'; rr(sx,h.y,h.w,h.h,6); ctx.fill();
+      ctx.fillStyle='rgba(31,42,68,.15)'; ctx.fillRect(sx+6,h.y+6,h.w-12,6);
+    }
+  });
+
+  // karakter
   cizKarakter();
+
+  // efekt yazıları
   ctx.font='16px system-ui'; ctx.textAlign='left';
   efekts.forEach(e=>{ ctx.globalAlpha=1-e.t; ctx.fillStyle='#1f2a44';
     ctx.fillText(e.txt,e.x+12,e.y-8-e.t*20); ctx.globalAlpha=1; });
 
+  // HUD
   ctx.fillStyle='#1f2a44'; ctx.textAlign='left'; ctx.font='18px system-ui';
-  ctx.fillText(`Puan: ${puan}`,20,34); ctx.fillText(`Can: ${'♥'.repeat(can)}`,20,60); ctx.fillText(`Koridor Hızı: ${hiz.toFixed(1)}x`,20,86);
+  ctx.fillText(`Puan: ${puan}`,20,34);
+  ctx.fillText(`Can: ${'♥'.repeat(can)}`,20,60);
+  ctx.fillText(`Hız: ${hiz.toFixed(1)}x`,20,86);
   const w=220,p=ilerleme/60; ctx.strokeStyle='rgba(31,42,68,.2)'; ctx.strokeRect(20,96,w,10);
   ctx.fillStyle='#86e3ce'; ctx.fillRect(20,96,w*p,10);
 }
-function loop(ts){ if(!calisiyor||durak){ last=ts; requestAnimationFrame(loop); return; }
-  const dt=Math.min(0.033,(ts-last)/1000||0.016); last=ts; tick(dt); draw(); requestAnimationFrame(loop); }
+
+function loop(ts){
+  if(!calisiyor||durak){ last=ts; requestAnimationFrame(loop); return; }
+  const dt=Math.min(0.033,(ts-last)/1000||0.016); last=ts;
+  tick(dt); draw(); requestAnimationFrame(loop);
+}
 
 /* ========= Yaşam Döngüsü & UI ========= */
 function start(){
